--- a/pages/Beef_Stir.html
+++ b/pages/Beef_Stir.html
@@ -39,7 +39,6 @@
           </div>
           <a href="#" class="logo">Recipe<span class="colored">•</span></a>
         </div>
-
         <ul>
           <li>
             <div class="user">
@@ -60,18 +59,21 @@
           <a
             href="https://web.facebook.com/mohammed.abdi.71619533"
             class="socialLink facebook"
-            ><i class="bx bxl-facebook"></i
-          ></a>
+          >
+            <i class="bx bxl-facebook"></i>
+          </a>
           <a
             href="https://www.linkedin.com/in/mohammed-abdi-tahir/"
             class="socialLink linkedin"
-            ><i class="bx bxl-linkedin"></i
-          ></a>
+          >
+            <i class="bx bxl-linkedin"></i>
+          </a>
           <a
             href="https://www.instagram.com/yuuichi_sano/"
             class="socialLink instagram"
-            ><i class="bx bxl-instagram"></i
-          ></a>
+          >
+            <i class="bx bxl-instagram"></i>
+          </a>
         </div>
       </nav>
     </header>
@@ -84,7 +86,7 @@
               <div class="timeNeeded container">
                 <i class="bx bxs-stopwatch"></i>
                 <div class="duration">
-                  <span>PREP TIME</span><span>10 Minutes</span>
+                  <span>PREP TIME</span><span>15 Minutes</span>
                 </div>
               </div>
               <div class="timeNeeded container">
@@ -109,34 +111,32 @@
             <table>
               <tr>
                 <td>Calories</td>
-                <td style="text-align: right">300 kcal</td>
+                <td style="text-align: right">350 kcal</td>
               </tr>
               <tr>
                 <td>Total Fat</td>
-                <td style="text-align: right">12 g</td>
+                <td style="text-align: right">14 g</td>
               </tr>
               <tr>
                 <td>Protein</td>
-                <td style="text-align: right">25 g</td>
+                <td style="text-align: right">28 g</td>
               </tr>
               <tr>
                 <td>Carbohydrate</td>
-                <td style="text-align: right">20 g</td>
+                <td style="text-align: right">22 g</td>
               </tr>
               <tr>
                 <td>Cholesterol</td>
-                <td style="text-align: right">60 mg</td>
+                <td style="text-align: right">70 mg</td>
               </tr>
             </table>
           </div>
         </section>
         <section class="description">
           <p>
-            Beef Stir Fry is a quick and flavorful dish featuring tender slices
-            of beef, crisp bell peppers, and a savory soy sauce-based sauce.
-            Perfect for busy weeknights, this dish is packed with protein and
-            vegetables, making it a healthy and satisfying meal. Serve it over
-            steamed rice or noodles for a complete dinner!
+            A quick and flavorful beef stir fry loaded with fresh vegetables and
+            a savory soy-based sauce. Perfect for a weeknight dinner, this dish
+            is ready in under 30 minutes!
           </p>
         </section>
         <section class="ingredientAndRecommendations">
@@ -148,27 +148,11 @@
                 sirloin, thinly sliced</label
               ><br />
               <label
-                ><input type="checkbox" class="customCheckbox" /> 1 red bell
-                pepper, sliced</label
-              ><br />
-              <label
-                ><input type="checkbox" class="customCheckbox" /> 1 yellow bell
-                pepper, sliced</label
-              ><br />
-              <label
-                ><input type="checkbox" class="customCheckbox" /> 1 green bell
-                pepper, sliced</label
-              ><br />
-              <label
-                ><input type="checkbox" class="customCheckbox" /> 1 onion,
-                sliced</label
-              ><br />
-              <label
-                ><input type="checkbox" class="customCheckbox" /> 3 tbsp soy
+                ><input type="checkbox" class="customCheckbox" /> 2 tbsp soy
                 sauce</label
               ><br />
               <label
-                ><input type="checkbox" class="customCheckbox" /> 2 tbsp oyster
+                ><input type="checkbox" class="customCheckbox" /> 1 tbsp oyster
                 sauce</label
               ><br />
               <label
@@ -180,98 +164,118 @@
                 vegetable oil</label
               ><br />
               <label
-                ><input type="checkbox" class="customCheckbox" /> 1 tsp sesame
-                oil (optional)</label
+                ><input type="checkbox" class="customCheckbox" /> 1 red bell
+                pepper, sliced</label
+              ><br />
+              <label
+                ><input type="checkbox" class="customCheckbox" /> 1 yellow bell
+                pepper, sliced</label
+              ><br />
+              <label
+                ><input type="checkbox" class="customCheckbox" /> 1 cup broccoli
+                florets</label
+              ><br />
+              <label
+                ><input type="checkbox" class="customCheckbox" /> 1 carrot,
+                julienned</label
+              ><br />
+              <label
+                ><input type="checkbox" class="customCheckbox" /> 2 garlic
+                cloves, minced</label
+              ><br />
+              <label
+                ><input type="checkbox" class="customCheckbox" /> 1 tsp ginger,
+                minced</label
+              ><br />
+              <label
+                ><input type="checkbox" class="customCheckbox" /> 1/2 cup beef
+                broth</label
               ><br />
             </form>
           </div>
           <div class="recommendations">
             <h4>You may also Like</h4>
             <div class="separate">
-              <!--start-->
               <div class="recipe">
-                <a href="French_Croissant.html">
+                <a href="Vegetable_Stir.html">
                   <img
-                    src="../images/food_samples/French_Butter_Croissant.webp"
-                    alt="French Butter Croissant"
+                    src="../images/food_samples/Vegetable_Stir_Fry.webp"
+                    alt="Vegetable Stir Fry"
                     loading="lazy"
                   />
                   <div class="separate little">
-                    <span class="title">French Butter Croissant</span>
+                    <span class="title">Vegetable Stir Fry</span>
                     <div class="mainIngredients">
                       <span class="heading">Main Ingredients:</span>
                       <div class="mainIngredientList">
-                        <span class="mainIngredient">Flour</span>
-                        <span class="mainIngredient">Butter</span>
-                        <span class="mainIngredient">Yeast</span>
+                        <span class="mainIngredient">Broccoli</span>
+                        <span class="mainIngredient">Carrots</span>
+                        <span class="mainIngredient">Soy Sauce</span>
                       </div>
                     </div>
                   </div>
                 </a>
               </div>
-              <!--next recipe-->
               <div class="recipe">
-                <a href="Roasted_Vegetables.html">
+                <a href="Lamb_Chops.html">
                   <img
-                    src="../images/food_samples/Roasted_Vegetables.webp"
-                    alt="Roasted Vegetables"
+                    src="../images/food_samples/Grilled_Lamb_Chops.webp"
+                    alt="Grilled Lamb Chops"
                     loading="lazy"
                   />
                   <div class="separate little">
-                    <span class="title">Roasted Vegetables</span>
+                    <span class="title">Grilled Lamb Chops</span>
                     <div class="mainIngredients">
                       <span class="heading">Main Ingredients:</span>
                       <div class="mainIngredientList">
-                        <span class="mainIngredient">Potatoes</span>
-                        <span class="mainIngredient">Zucchini</span>
+                        <span class="mainIngredient">Lamb</span>
+                        <span class="mainIngredient">Rosemary</span>
+                        <span class="mainIngredient">Garlic</span>
+                      </div>
+                    </div>
+                  </div>
+                </a>
+              </div>
+              <div class="recipe">
+                <a href="Spaghetti_Bolognese.html">
+                  <img
+                    src="../images/food_samples/Spaghetti_Bolognese.webp"
+                    alt="Spaghetti Bolognese"
+                    loading="lazy"
+                  />
+                  <div class="separate little">
+                    <span class="title">Spaghetti Bolognese</span>
+                    <div class="mainIngredients">
+                      <span class="heading">Main Ingredients:</span>
+                      <div class="mainIngredientList">
+                        <span class="mainIngredient">Ground Beef</span>
+                        <span class="mainIngredient">Tomatoes</span>
+                        <span class="mainIngredient">Pasta</span>
+                      </div>
+                    </div>
+                  </div>
+                </a>
+              </div>
+              <div class="recipe">
+                <a href="Chicken_Skewers.html">
+                  <img
+                    src="../images/food_samples/Chicken_Skewers.webp"
+                    alt="Chicken Skewers"
+                    loading="lazy"
+                  />
+                  <div class="separate little">
+                    <span class="title">Chicken Skewers</span>
+                    <div class="mainIngredients">
+                      <span class="heading">Main Ingredients:</span>
+                      <div class="mainIngredientList">
+                        <span class="mainIngredient">Chicken</span>
+                        <span class="mainIngredient">Bell Peppers</span>
                         <span class="mainIngredient">Olive Oil</span>
                       </div>
                     </div>
                   </div>
                 </a>
               </div>
-              <!--next recipe-->
-              <div class="recipe">
-                <a href="Cheesecake.html">
-                  <img
-                    src="../images/food_samples/Cheesecake.webp"
-                    alt="Cheesecake"
-                    loading="lazy"
-                  />
-                  <div class="separate little">
-                    <span class="title">Cheesecake</span>
-                    <div class="mainIngredients">
-                      <span class="heading">Main Ingredients:</span>
-                      <div class="mainIngredientList">
-                        <span class="mainIngredient">Cream Cheese</span>
-                        <span class="mainIngredient">Graham Crackers</span>
-                      </div>
-                    </div>
-                  </div>
-                </a>
-              </div>
-              <!--next recipe-->
-              <div class="recipe">
-                <a href="Naan_Bread.html">
-                  <img
-                    src="../images/food_samples/Indian_Naan_Bread.webp"
-                    alt="Indian Naan Bread"
-                    loading="lazy"
-                  />
-                  <div class="separate little">
-                    <span class="title">Indian Naan Bread</span>
-                    <div class="mainIngredients">
-                      <span class="heading">Main Ingredients:</span>
-                      <div class="mainIngredientList">
-                        <span class="mainIngredient">Flour</span>
-                        <span class="mainIngredient">Yogurt</span>
-                        <span class="mainIngredient">Yeast</span>
-                      </div>
-                    </div>
-                  </div>
-                </a>
-              </div>
-              <!--next recipe-->
             </div>
           </div>
         </section>
@@ -279,41 +283,33 @@
           <div class="instructions">
             <h2>Instructions</h2>
             <dl>
-              <dt>1. Prepare the Beef</dt>
+              <dt>1. Marinate the Beef</dt>
               <dd>
-                In a bowl, combine the thinly sliced beef with 1 tbsp soy sauce
-                and 1 tbsp cornstarch. Mix well and let it marinate for 10
+                In a bowl, combine thinly sliced beef with soy sauce, oyster
+                sauce, and cornstarch. Mix well and let it marinate for 15
                 minutes.
               </dd>
-
-              <dt>2. Cook the Vegetables</dt>
+              <dt>2. Prepare the Vegetables</dt>
               <dd>
-                Heat 1 tbsp vegetable oil in a large skillet or wok over
-                medium-high heat. Add the sliced bell peppers and onion, and
-                stir fry for 3-4 minutes until slightly softened. Remove the
-                vegetables from the skillet and set aside.
+                Slice the bell peppers, julienne the carrot, and cut the
+                broccoli into florets. Mince the garlic and ginger.
               </dd>
-
               <dt>3. Cook the Beef</dt>
               <dd>
-                In the same skillet, add the remaining 1 tbsp vegetable oil. Add
-                the marinated beef and stir fry for 2-3 minutes until browned
-                but not fully cooked. Remove the beef from the skillet and set
-                aside.
+                Heat 1 tbsp vegetable oil in a wok or large skillet over high
+                heat. Add the marinated beef and stir-fry for 2-3 minutes until
+                browned. Remove and set aside.
               </dd>
-
-              <dt>4. Combine and Sauce</dt>
+              <dt>4. Stir-Fry the Vegetables</dt>
               <dd>
-                Return the cooked vegetables and beef to the skillet. Add the
-                remaining soy sauce, oyster sauce, and sesame oil (if using).
-                Stir fry for 2-3 minutes until everything is well-coated and
-                heated through.
+                In the same wok, add the remaining oil. Stir-fry the garlic and
+                ginger for 30 seconds, then add the vegetables. Cook for 3-4
+                minutes until tender-crisp.
               </dd>
-
-              <dt>5. Serve</dt>
+              <dt>5. Combine and Serve</dt>
               <dd>
-                Serve the beef stir fry hot over steamed rice or noodles.
-                Garnish with sesame seeds or chopped green onions if desired.
+                Return the beef to the wok. Add beef broth and stir-fry for 2-3
+                minutes until the sauce thickens. Serve hot with steamed rice.
               </dd>
             </dl>
           </div>
@@ -327,7 +323,7 @@
     </main>
     <footer>
       <span class="logo">Recipe</span>
-      <span>&copy;2025 | MOHAMMED ABDI </span>
+      <span>&copy;2025 | MOHAMMED ABDI</span>
     </footer>
   </body>
 </html>
