--- a/pages/Grilled_Chicken.html
+++ b/pages/Grilled_Chicken.html
@@ -39,7 +39,6 @@
           </div>
           <a href="#" class="logo">Recipe<span class="colored">•</span></a>
         </div>
-
         <ul>
           <li>
             <div class="user">
@@ -60,18 +59,21 @@
           <a
             href="https://web.facebook.com/mohammed.abdi.71619533"
             class="socialLink facebook"
-            ><i class="bx bxl-facebook"></i
-          ></a>
+          >
+            <i class="bx bxl-facebook"></i>
+          </a>
           <a
             href="https://www.linkedin.com/in/mohammed-abdi-tahir/"
             class="socialLink linkedin"
-            ><i class="bx bxl-linkedin"></i
-          ></a>
+          >
+            <i class="bx bxl-linkedin"></i>
+          </a>
           <a
             href="https://www.instagram.com/yuuichi_sano/"
             class="socialLink instagram"
-            ><i class="bx bxl-instagram"></i
-          ></a>
+          >
+            <i class="bx bxl-instagram"></i>
+          </a>
         </div>
       </nav>
     </header>
@@ -84,17 +86,17 @@
               <div class="timeNeeded container">
                 <i class="bx bxs-stopwatch"></i>
                 <div class="duration">
-                  <span>PREP TIME</span><span>10 Minutes</span>
+                  <span>PREP TIME</span><span>20 Minutes</span>
                 </div>
               </div>
               <div class="timeNeeded container">
                 <i class="bx bxs-stopwatch"></i>
                 <div class="duration">
-                  <span>COOK TIME</span><span>15 Minutes</span>
+                  <span>COOK TIME</span><span>25 Minutes</span>
                 </div>
               </div>
               <div class="specificMealType container">
-                <i class="fa-solid fa-utensils"></i><span>Meat</span>
+                <i class="fa-solid fa-utensils"></i><span>Grilled</span>
               </div>
             </div>
           </div>
@@ -102,18 +104,18 @@
         <section class="imageAndNutrition">
           <img
             src="../images/food_samples/Grilled_Chicken_with_Herb_Marinade.webp"
-            alt="Grilled Chicken with Herb Marinade"
+            alt="Grilled Chicken"
           />
           <div class="nutrition">
             <h4>Nutrition Information</h4>
             <table>
               <tr>
                 <td>Calories</td>
-                <td style="text-align: right">220 kcal</td>
+                <td style="text-align: right">300 kcal</td>
               </tr>
               <tr>
                 <td>Total Fat</td>
-                <td style="text-align: right">8 g</td>
+                <td style="text-align: right">12 g</td>
               </tr>
               <tr>
                 <td>Protein</td>
@@ -121,7 +123,7 @@
               </tr>
               <tr>
                 <td>Carbohydrate</td>
-                <td style="text-align: right">2 g</td>
+                <td style="text-align: right">8 g</td>
               </tr>
               <tr>
                 <td>Cholesterol</td>
@@ -132,11 +134,10 @@
         </section>
         <section class="description">
           <p>
-            Grilled Chicken with Herb Marinade is a flavorful and juicy dish
-            featuring tender chicken breasts marinated in a blend of fresh
-            herbs, olive oil, and garlic. Perfectly grilled to perfection, this
-            dish is a healthy and delicious option for any meal. Serve it with a
-            side of vegetables or a fresh salad for a complete meal!
+            Juicy grilled chicken marinated in a blend of fresh herbs, garlic,
+            and olive oil. Perfectly charred on the outside and tender on the
+            inside, this dish is a crowd-pleaser for any barbecue or weeknight
+            dinner.
           </p>
         </section>
         <section class="ingredientAndRecommendations">
@@ -152,8 +153,8 @@
                 oil</label
               ><br />
               <label
-                ><input type="checkbox" class="customCheckbox" /> 2 cloves
-                garlic, minced</label
+                ><input type="checkbox" class="customCheckbox" /> 2 garlic
+                cloves, minced</label
               ><br />
               <label
                 ><input type="checkbox" class="customCheckbox" /> 1 tbsp fresh
@@ -162,10 +163,6 @@
               <label
                 ><input type="checkbox" class="customCheckbox" /> 1 tbsp fresh
                 thyme, chopped</label
-              ><br />
-              <label
-                ><input type="checkbox" class="customCheckbox" /> 1 tbsp fresh
-                parsley, chopped</label
               ><br />
               <label
                 ><input type="checkbox" class="customCheckbox" /> 1 tsp
@@ -184,70 +181,6 @@
           <div class="recommendations">
             <h4>You may also Like</h4>
             <div class="separate">
-              <!--start-->
-              <div class="recipe">
-                <a href="French_Baguette.html">
-                  <img
-                    src="../images/food_samples/French_Baguette.webp"
-                    alt="French Baguette"
-                    loading="lazy"
-                  />
-                  <div class="separate little">
-                    <span class="title">French Baguette</span>
-                    <div class="mainIngredients">
-                      <span class="heading">Main Ingredients:</span>
-                      <div class="mainIngredientList">
-                        <span class="mainIngredient">Flour</span>
-                        <span class="mainIngredient">Water</span>
-                        <span class="mainIngredient">Yeast</span>
-                      </div>
-                    </div>
-                  </div>
-                </a>
-              </div>
-              <!--next recipe-->
-              <div class="recipe">
-                <a href="Vegetable_Curry.html">
-                  <img
-                    src="../images/food_samples/Vegetable_Curry.webp"
-                    alt="Vegetable Curry"
-                    loading="lazy"
-                  />
-                  <div class="separate little">
-                    <span class="title">Vegetable Curry</span>
-                    <div class="mainIngredients">
-                      <span class="heading">Main Ingredients:</span>
-                      <div class="mainIngredientList">
-                        <span class="mainIngredient">Cauliflower</span>
-                        <span class="mainIngredient">Spinach</span>
-                        <span class="mainIngredient">Curry Powder</span>
-                      </div>
-                    </div>
-                  </div>
-                </a>
-              </div>
-              <!--next recipe-->
-              <div class="recipe">
-                <a href="German_Pretzel.html">
-                  <img
-                    src="../images/food_samples/German_Soft_Pretzel.webp"
-                    alt="German Soft Pretzel"
-                    loading="lazy"
-                  />
-                  <div class="separate little">
-                    <span class="title">German Soft Pretzel</span>
-                    <div class="mainIngredients">
-                      <span class="heading">Main Ingredients:</span>
-                      <div class="mainIngredientList">
-                        <span class="mainIngredient">Flour</span>
-                        <span class="mainIngredient">Yeast</span>
-                        <span class="mainIngredient">Baking Soda</span>
-                      </div>
-                    </div>
-                  </div>
-                </a>
-              </div>
-              <!--next recipe-->
               <div class="recipe">
                 <a href="Lamb_Chops.html">
                   <img
@@ -260,15 +193,74 @@
                     <div class="mainIngredients">
                       <span class="heading">Main Ingredients:</span>
                       <div class="mainIngredientList">
-                        <span class="mainIngredient">Lamb Chops</span>
-                        <span class="mainIngredient">Garlic</span>
+                        <span class="mainIngredient">Lamb</span>
                         <span class="mainIngredient">Rosemary</span>
+                        <span class="mainIngredient">Garlic</span>
                       </div>
                     </div>
                   </div>
                 </a>
               </div>
-              <!--next recipe-->
+              <div class="recipe">
+                <a href="Chicken_Skewers.html">
+                  <img
+                    src="../images/food_samples/Chicken_Skewers.webp"
+                    alt="Chicken Skewers"
+                    loading="lazy"
+                  />
+                  <div class="separate little">
+                    <span class="title">Chicken Skewers</span>
+                    <div class="mainIngredients">
+                      <span class="heading">Main Ingredients:</span>
+                      <div class="mainIngredientList">
+                        <span class="mainIngredient">Chicken</span>
+                        <span class="mainIngredient">Bell Peppers</span>
+                        <span class="mainIngredient">Olive Oil</span>
+                      </div>
+                    </div>
+                  </div>
+                </a>
+              </div>
+              <div class="recipe">
+                <a href="Roasted_Vegetables.html">
+                  <img
+                    src="../images/food_samples/Roasted_Vegetables.webp"
+                    alt="Roasted Vegetables"
+                    loading="lazy"
+                  />
+                  <div class="separate little">
+                    <span class="title">Roasted Vegetables</span>
+                    <div class="mainIngredients">
+                      <span class="heading">Main Ingredients:</span>
+                      <div class="mainIngredientList">
+                        <span class="mainIngredient">Zucchini</span>
+                        <span class="mainIngredient">Bell Peppers</span>
+                        <span class="mainIngredient">Olive Oil</span>
+                      </div>
+                    </div>
+                  </div>
+                </a>
+              </div>
+              <div class="recipe">
+                <a href="Vegetable_Stir.html">
+                  <img
+                    src="../images/food_samples/Vegetable_Stir_Fry.webp"
+                    alt="Vegetable Stir Fry"
+                    loading="lazy"
+                  />
+                  <div class="separate little">
+                    <span class="title">Vegetable Stir Fry</span>
+                    <div class="mainIngredients">
+                      <span class="heading">Main Ingredients:</span>
+                      <div class="mainIngredientList">
+                        <span class="mainIngredient">Broccoli</span>
+                        <span class="mainIngredient">Carrots</span>
+                        <span class="mainIngredient">Soy Sauce</span>
+                      </div>
+                    </div>
+                  </div>
+                </a>
+              </div>
             </div>
           </div>
         </section>
@@ -278,39 +270,30 @@
             <dl>
               <dt>1. Prepare the Marinade</dt>
               <dd>
-                In a small bowl, combine the olive oil, minced garlic, rosemary,
-                thyme, parsley, salt, black pepper, and lemon juice. Mix well to
-                create the herb marinade.
+                In a bowl, combine olive oil, minced garlic, rosemary, thyme,
+                salt, pepper, and lemon juice. Whisk until well blended.
               </dd>
-
               <dt>2. Marinate the Chicken</dt>
               <dd>
-                Place the chicken breasts in a large resealable bag or shallow
-                dish. Pour the marinade over the chicken, ensuring each piece is
-                well-coated. Seal the bag or cover the dish and refrigerate for
-                at least 30 minutes, or up to 4 hours for deeper flavor.
+                Place chicken breasts in a resealable bag or shallow dish. Pour
+                the marinade over the chicken, ensuring it's fully coated.
+                Refrigerate for at least 1 hour, or overnight for best results.
               </dd>
-
               <dt>3. Preheat the Grill</dt>
               <dd>
-                Preheat your grill to medium-high heat (about 375°F to 400°F or
-                190°C to 200°C). If using a grill pan, preheat it on the
-                stovetop over medium-high heat.
+                Preheat your grill to medium-high heat (about 400°F or 200°C).
+                Lightly oil the grates to prevent sticking.
               </dd>
-
               <dt>4. Grill the Chicken</dt>
               <dd>
-                Remove the chicken from the marinade and shake off any excess.
-                Place the chicken on the preheated grill and cook for 6-7
-                minutes per side, or until the internal temperature reaches
-                165°F (75°C) and the chicken is golden brown with grill marks.
+                Remove chicken from the marinade, shaking off excess. Place on
+                the grill and cook for 6-7 minutes per side, or until the
+                internal temperature reaches 165°F (75°C).
               </dd>
-
               <dt>5. Rest and Serve</dt>
               <dd>
-                Transfer the grilled chicken to a plate and let it rest for 5
-                minutes. Serve with a side of grilled vegetables, a fresh salad,
-                or your favorite side dish.
+                Let the chicken rest for 5 minutes before slicing. Serve with a
+                side of grilled vegetables or a fresh salad.
               </dd>
             </dl>
           </div>
@@ -324,7 +307,7 @@
     </main>
     <footer>
       <span class="logo">Recipe</span>
-      <span>&copy;2025 | MOHAMMED ABDI </span>
+      <span>&copy;2025 | MOHAMMED ABDI</span>
     </footer>
   </body>
 </html>
